more report work, some bib work.

--- a/Domination/honours-project-report/mybibfile.bib
+++ b/Domination/honours-project-report/mybibfile.bib
@@ -1,15 +1,13 @@
 @inproceedings{Albrecht98bayesianmodels,
 	author = {David W. Albrecht and Ingrid Zukerman and Ann E. Nicholson},
-	title = {Bayesian Models for Keyhole Plan Recognition in an Adventure Game},
-	booktitle = {},
+	title = {{Bayesian Models for Keyhole Plan Recognition in an Adventure Game}},
 	year = {1998},
 	pages = {5--47},
-	publisher = {}
 }
 
 @ARTICLE{Goldman99anew,
     author = {Robert P. Goldman and Christopher W. Geib and Christopher A. Miller},
-    title = {A New Model of Plan Recognition},
+    title = {{A New Model of Plan Recognition}},
     journal = {Artificial Intelligence},
     year = {1999},
     volume = {64},
@@ -17,9 +15,8 @@
 }
 
 @Article{journals/ai/CharniakG93,
-  title =	"A Bayesian Model of Plan Recognition",
+  title =	{{A Bayesian Model of Plan Recognition}},
   author =	"Eugene Charniak and Robert P. Goldman",
-  journal =	"Artif. Intell",
   year = 	"1993",
   number =	"1",
   volume =	"64",
@@ -31,8 +28,8 @@
 }
 
 @Article{journals/ai/SchmidtSG78,
-  title =	"The Plan Recognition Problem: An Intersection of
-		 Psychology and Artificial Intelligence",
+  title =	{{The Plan Recognition Problem: An Intersection of
+		 Psychology and Artificial Intelligence}},
   author =	"Charles F. Schmidt and N. S. Sridharan and John L.
 		 Goodson",
   journal =	"Artif. Intell",
@@ -47,15 +44,10 @@
 }
 
 @InProceedings{conf/aaai/KautzA86,
-  title =	"Generalized Plan Recognition",
+  title =	{{Generalized Plan Recognition}},
   author =	"Henry A. Kautz and James F. Allen",
-  bibdate =	"2012-12-12",
-  bibsource =	"DBLP,
-		 http://dblp.uni-trier.de/db/conf/aaai/aaai86-1.html#KautzA86",
-  booktitle =	"AAAI",
-  booktitle =	"Proceedings of the 5th National Conference on
-		 Artificial Intelligence. Philadelphia, {PA}, August
-		 11-15, 1986. Volume 1: Science",
+  booktitle =	"Proceedings of 1986 Conference of the American
+		 Association for Artificial Intelligence",
   publisher =	"Morgan Kaufmann",
   year = 	"1986",
   editor =	"Tom Kehler",
@@ -64,45 +56,11 @@
 }
 
 @Misc{oai:CiteSeerPSU:538953,
-  title =	"Retroactive Recognition of Interleaved Plans for
-		 Natural Language Dialogue",
+  title =	{{Retroactive Recognition of Interleaved Plans for
+		 Natural Language Dialogue}},
   author =	"Nate Blaylock",
   year = 	"2001",
   month =	dec # "~11",
-  abstract =	"State of the art plan recognition for use in natural
-		 language dialogue systems has progressed in coverage of
-		 discourse phenomena and plan navigation strategies.
-		 Most systems, however, suffer from several
-		 deficiencies, namely, they do not have a specific
-		 strategy for the (inevitable) case where they make an
-		 incorrect hypothesis inference and they cannot handle
-		 interleaved plan navigation, where a user jumps back
-		 and forth between several plans. In addition, most plan
-		 recognition systems cannot handle the rich variety of
-		 possible natural language utterances a dialogue system
-		 may receive as input, especially the case where a
-		 language utterance corresponds to several actions which
-		 the system considers to be atomic. We discuss previous
-		 work in plan recognition, especially in the area of
-		 dialogues systems. We then describe a plan recognition
-		 system which can recover from incorrect inferences,
-		 handles interleaved plan navigation, and handles
-		 several linguistic phenomena, including support for
-		 natural language multi-action paraphrase.",
-  citeseer-references = "oai:CiteSeerPSU:63019; oai:CiteSeerPSU:513508;
-		 oai:CiteSeerPSU:380018; oai:CiteSeerPSU:42303;
-		 oai:CiteSeerPSU:129022; oai:CiteSeerPSU:153181;
-		 oai:CiteSeerPSU:154202; oai:CiteSeerPSU:27849;
-		 oai:CiteSeerPSU:49669; oai:CiteSeerPSU:76352;
-		 oai:CiteSeerPSU:136682; oai:CiteSeerPSU:580310;
-		 oai:CiteSeerPSU:580093; oai:CiteSeerPSU:66010;
-		 oai:CiteSeerPSU:287495; oai:CiteSeerPSU:29975;
-		 oai:CiteSeerPSU:454853; oai:CiteSeerPSU:103423;
-		 oai:CiteSeerPSU:131954; oai:CiteSeerPSU:357862;
-		 oai:CiteSeerPSU:150824; oai:CiteSeerPSU:654811;
-		 oai:CiteSeerPSU:559276; oai:CiteSeerPSU:575960;
-		 oai:CiteSeerPSU:385719; oai:CiteSeerPSU:583001;
-		 oai:CiteSeerPSU:177943; oai:CiteSeerPSU:582710",
   annote =	"Nate Blaylock (The University of Rochester; Computer
 		 Science Department; Rochester , New York 14627);",
   bibsource =	"OAI-PMH server at cs1.ist.psu.edu",
@@ -114,13 +72,12 @@
 }
 
 @InProceedings{conf/aiide/SynnaeveB11,
-  title =	"A Bayesian Model for Plan Recognition in {RTS} Games
-		 Applied to StarCraft",
+  title =	{{A Bayesian Model for Plan Recognition in {RTS} Games
+		 Applied to StarCraft}},
   author =	"Gabriel Synnaeve and Pierre Bessi{\`e}re",
   bibdate =	"2012-02-13",
   bibsource =	"DBLP,
 		 http://dblp.uni-trier.de/db/conf/aiide/aiide2011.html#SynnaeveB11",
-  booktitle =	"AIIDE",
   booktitle =	"Proceedings of the Seventh {AAAI} Conference on
 		 Artificial Intelligence and Interactive Digital
 		 Entertainment, {AIIDE} 2011, October 10-14, 2011,
@@ -135,7 +92,7 @@
   author =	"Philip R. Cohen and C. Raymond Perrault and James F.
 		 Allen",
   editor =	"Wendy G. Lehnert and Martin H. Ringle",
-  title =	"Beyond question answering",
+  title =	{{Beyond Question Answering}},
   booktitle =	"Strategies for Natural Language Processing",
   pages =	"245--274",
   publisher =	"Erlbaum",
@@ -146,7 +103,7 @@
 
 @article{Geib:2009:PPR:1550966.1551246,
  author = {Geib, Christopher W. and Goldman, Robert P.},
- title = {A probabilistic plan recognition algorithm based on plan tree grammars},
+ title = {{A Probabilistic Plan Recognition Algorithm Based on Plan Tree Grammars}},
  journal = {Artif. Intell.},
  issue_date = {July, 2009},
  volume = {173},
@@ -166,9 +123,23 @@
 
 @book{JohnFunge:AIForComp,
  author = "John David Funge",
- title = "Artificial Intelligence for Computer Games: An Introduction",
+ title = {{Artificial Intelligence for Computer Games: An Introduction}},
  pages = {viii -- 9},
  year = "2004",
  publisher = "A K Peters",
  ISBN = "1-58450-344-0",
 }
+
+@masterthesis{MWolf:PlayerForRisk,
+ author = "Michael Wolf",
+ title = {{An Intelligent Artificial Player for the Game of Risk}},
+ year = "2005",
+ publisher = "(Unpublished doctoral dissertation)"
+}
+
+@finalproject{LozanoBratz,
+ author = "Juan Lozano, Dane Bratz",
+ title = {{A Risky Proposal: Designing a Risk Game Playing Agent}},
+ year = "2012",
+}
+ 
